Insta Links updated

--- a/public/Teams/treasury.json
+++ b/public/Teams/treasury.json
@@ -6,7 +6,7 @@
     "name": "Rohan Sonawane",
     "position": "Head",
     "mail": "rohannso14@gmail.com",
-    "instagram": "",
+    "instagram": "https://www.instagram.com/rohan_sonawane88",
     "linkedin": "",
     "img": "Assets\\team\\Treasury\\Treasury_Rohan_Sonawane.jpg"
   },
@@ -14,7 +14,7 @@
     "name": "Ishita Deshpande ",
     "position": "Head",
     "mail": "22020086@pvgcoet.ac.in",
-    "instagram": "",
+    "instagram": "https://www.instagram.com/ishita22d",
     "linkedin": "https://www.linkedin.com/in/ishita-deshpande-b2426225a/",
     "img": "Assets\\team\\Treasury\\Treasury_Ishita_Deshpande.jpg"
   },
@@ -22,7 +22,7 @@
     "name": "Shreya Gangatirkar",
     "position": "Member",
     "mail": "23020066@pvgcoet.ac.in",
-    "instagram": "",
+    "instagram": "https://www.instagram.com/shreya_0312",
     "linkedin": "",
     "img": "Assets\\team\\Treasury\\Treasury_Shreya_Gangatirkar.jpg"
   },
@@ -30,7 +30,7 @@
     "name": "Vedant Pandurang Kokare",
     "position": "Member",
     "mail": "kokarevedant579@gmail.com",
-    "instagram": "",
+    "instagram": "https://www.instagram.com/",
     "linkedin": "",
     "img": "Assets\\team\\Treasury\\Treasury_Vedant_Pandurang_Kokare.jpg"
   },
@@ -38,7 +38,7 @@
     "name": "Shrinidhi Upadhye",
     "position": "Member",
     "mail": "shrinidhiupadhye25@gmail.com",
-    "instagram": "",
+    "instagram": "https://www.instagram.com/being_charismatic",
     "linkedin": "https://www.linkedin.com/in/shrinidhi-upadhye-b29412282/",
     "img": "Assets\\team\\Treasury\\Treasury_Shrinidhi_Upadhye.jpg"
   },
@@ -46,7 +46,7 @@
     "name": "Nikhil Chavan",
     "position": "Member",
     "mail": "nikhilchavan4002@gmail.com",
-    "instagram": "",
+    "instagram": "https://www.instagram.com/nikhil_chavan4002",
     "linkedin": "https://www.linkedin.com/in/nikhil-chavan-795798256/",
     "img": "Assets\\team\\Treasury\\Treasury_Nikhil_Chavan.jpg"
   }
