minor changes to treasury.json

--- a/public/Teams/treasury.json
+++ b/public/Teams/treasury.json
@@ -4,7 +4,7 @@
   },
   {
     "name": "Rohan Sonawane",
-    "position": "Head",
+    "position": "Treasury Head",
     "mail": "rohannso14@gmail.com",
     "instagram": "https://www.instagram.com/rohan_sonawane88",
     "linkedin": "",
@@ -12,7 +12,7 @@
   },
   {
     "name": "Ishita Deshpande ",
-    "position": "Head",
+    "position": "Sponsorship Head",
     "mail": "22020086@pvgcoet.ac.in",
     "instagram": "https://www.instagram.com/ishita22d",
     "linkedin": "https://www.linkedin.com/in/ishita-deshpande-b2426225a/",
