Changes Sponsors and Added Linkedin / Instagram links

--- a/public/Teams/treasury.json
+++ b/public/Teams/treasury.json
@@ -7,7 +7,7 @@
     "position": "Treasury Head",
     "mail": "rohannso14@gmail.com",
     "instagram": "https://www.instagram.com/rohan_sonawane88",
-    "linkedin": "",
+    "linkedin": "https://www.linkedin.com/in/rohan-s-441a951ba/+",
     "img": "Assets\\team\\Treasury\\Treasury_Rohan_Sonawane.jpg"
   },
   {
@@ -31,7 +31,7 @@
     "position": "Member",
     "mail": "kokarevedant579@gmail.com",
     "instagram": "https://www.instagram.com/",
-    "linkedin": "",
+    "linkedin": "https://www.linkedin.com/in/vedant-kokare-ab9672260/",
     "img": "Assets\\team\\Treasury\\Treasury_Vedant_Pandurang_Kokare.jpg"
   },
   {
@@ -39,7 +39,7 @@
     "position": "Member",
     "mail": "23020066@pvgcoet.ac.in",
     "instagram": "https://www.instagram.com/shreya_0312",
-    "linkedin": "",
+    "linkedin": "https://www.linkedin.com/in/shreya-gangatirkar-82408a298/",
     "img": "Assets\\team\\Treasury\\Treasury_Shreya_Gangatirkar.jpg"
   },
 
